--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.13"
 requests = "^2.32.4"
+streamlit = "^1.47.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
