--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "weather-checker"
 version = "0.1.0"
-description = ""
+description = "A Streamlit app to check real-time weather forecasts"
 authors = ["zoarsh <zoarsharvit@gmail.com>"]
 readme = "README.md"
 package-mode = false
